syntax = "proto3";

import "github.com/loomnetwork/go-loom/types/types.proto";

package karma;

message KarmaParams {
    KarmaConfig config = 1;
    repeated KarmaAddressSource users = 2;
}

message KarmaConfigValidator {
    KarmaConfig config = 1;
    Address oracle = 2;
}

message KarmaParamsValidatorNewMaxKarma {
    int64 max_karma = 1;
    Address oracle = 2;
}

message KarmaParamsValidatorNewOracle {
    Address new_oracle = 1;
    Address old_oracle = 2;
}
message KarmaParamsMutableValidator{
    bool mutable_oracle = 1;
    Address oracle = 2;
}

message KarmaSourceReward {
    string name = 1;
    int64 reward = 2;
}

message KarmaSource {
    string name = 1;
    int64 count = 2;
}

message KarmaAddressSource {
    Address user = 1;
    repeated KarmaSource sources = 2;
}

message KarmaConfig {
    bool enabled = 1;
    bool mutable_oracle = 2;
    Address Oracle = 4;
    repeated KarmaSourceReward sources = 5;
    int64 session_max_access_count = 6;
    int64 session_duration = 7;
    bool deploy_enabled = 8;
    bool call_enabled = 9;
    int64 last_update_time = 10;
}

message KarmaState {
    repeated KarmaSource source_states = 1;
    int64 last_update_time = 2;
}

message KarmaStateUser {
    repeated KarmaSource source_states = 1;
    Address User = 2;
    Address Oracle = 3;
}

message KarmaStateKeyUser {
    repeated string state_keys = 1;
    Address User = 2;
    Address Oracle = 3;
}

message KarmaInitRequest {
    KarmaParams Params = 1;
}

message KarmaUserToken{
    Address Owner = 1;
    int64 token_count = 2;
}

message KarmaTotal{
    int64 count = 1;
}

message KarmaDeploy{
    int64 count = 1;
}